--- a/use-undertow/src/main/resources/application.properties
+++ b/use-undertow/src/main/resources/application.properties
@@ -1,15 +1,4 @@
-
-# Undertow 日志存放目录
-server.undertow.accesslog.dir=
-# 是否启动日志
-server.undertow.accesslog.enabled=false 
-# 日志格式
-server.undertow.accesslog.pattern=common
-# 日志文件名前缀
-server.undertow.accesslog.prefix=access_log
-# 日志文件名后缀
-server.undertow.accesslog.suffix=log
-# HTTP POST请求最大的大小
+﻿# HTTP POST请求最大的大小 
 server.undertow.max-http-post-size=0 
 # 设置IO线程数, 它主要执行非阻塞的任务,它们会负责多个连接, 默认设置每个CPU核心一个线程
 server.undertow.io-threads=4
@@ -27,3 +16,6 @@ spring.redis.host=localhost
 spring.redis.port=6379
 
 test.hello=123
+server.port=8081
+spring.dubbo.application.name=dubbo-provider
+spring.dubbo.application.registry=zookeeper://127.0.0.1:2181
