--- a/Redis-Mybatis/src/main/resources/application.properties
+++ b/Redis-Mybatis/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#actuator端口
+﻿#actuator端口
 management.server.port=9001
 #修改访问路径  2.0之前默认是/   2.0默认是 /actuator  可以通过这个属性值修改
 management.endpoints.web.base-path=/monitor
@@ -42,3 +42,10 @@ rocketmq.consumer.consumeThreadMin=5
 rocketmq.consumer.consumeThreadMax=32
 #设置一次消费消息的条数，默认为1条
 rocketmq.consumer.consumeMessageBatchMaxSize=1
+
+
+mybatis.typeAliasesPackage=com.example.demo.entity
+mybatis.mapper-locations=classpath:mapper/*.xml
+
+spring.dubbo.application.name=dubbo-comsumer
+spring.dubbo.application.registry=zookeeper://127.0.0.1:2181
