--- a/Redis-Mybatis/pom.xml
+++ b/Redis-Mybatis/pom.xml
@@ -16,6 +16,8 @@
 
     <properties>
         <java.version>1.8</java.version>
+         <maven.compiler.source>1.8</maven.compiler.source>
+         <maven.compiler.target>1.8</maven.compiler.target>
         <rocketmq.version>4.7.0</rocketmq.version>
     </properties>
 
@@ -53,6 +55,11 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <dependency>
+		    <groupId>com.alibaba.spring.boot</groupId>
+		    <artifactId>dubbo-spring-boot-starter</artifactId>
+		    <version>2.0.0</version>
+		</dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
         </dependency>
@@ -83,6 +90,17 @@
             <artifactId>lombok</artifactId>
             <version>1.16.10</version>
         </dependency>
+        <dependency>
+            <groupId>com.101tec</groupId>
+            <artifactId>zkclient</artifactId>
+            <version>0.10</version>
+        </dependency>
+        <dependency>
+          <groupId>com.ltq</groupId>
+		  <artifactId>hello</artifactId>
+		  <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <build>
