--- a/Redis-Mybatis/pom.xml
+++ b/Redis-Mybatis/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.5.RELEASE</version>
+        <version>2.3.8.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
@@ -95,11 +95,11 @@
             <artifactId>zkclient</artifactId>
             <version>0.10</version>
         </dependency>
-        <dependency>
-          <groupId>com.ltq</groupId>
-		  <artifactId>hello</artifactId>
-		  <version>0.0.1-SNAPSHOT</version>
-        </dependency>
+<!--        <dependency>-->
+<!--          <groupId>com.ltq</groupId>-->
+<!--		  <artifactId>hello</artifactId>-->
+<!--		  <version>0.0.1-SNAPSHOT</version>-->
+<!--        </dependency>-->
 
     </dependencies>
 
