--- a/springboot-agent/pom.xml
+++ b/springboot-agent/pom.xml
@@ -45,6 +45,10 @@
 			<artifactId>redisson-spring-boot-starter</artifactId>
 			<version>3.17.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
