--- a/springboot-apollo/pom.xml
+++ b/springboot-apollo/pom.xml
@@ -21,22 +21,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
-        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -45,10 +33,9 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.insnail.base</groupId>
-            <artifactId>common-serialization</artifactId>
-            <version>1.2.5</version>
-            <scope>compile</scope>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-json</artifactId>
+            <version>5.8.9</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
