--- a/Redis-Mybatis/src/main/resources/application.properties
+++ b/Redis-Mybatis/src/main/resources/application.properties
@@ -6,13 +6,13 @@ management.endpoints.web.base-path=/monitor
 management.endpoints.web.exposure.include=*
 #显示健康具体信息  默认不会显示详细信息
 management.endpoint.health.show-details=always
-
 #database
-spring.datasource.url=jdbc:mysql://localhost:3306/user
+spring.datasource.url=jdbc:mysql://localhost:3306/mixer
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
+#spring.batch.jdbc.initialize-schema=ALWAYS
+spring.batch.initialize-schema=ALWAYS
 #Redis
 spring.redis.host=localhost
 spring.redis.port=6379
@@ -24,28 +24,6 @@ spring.redis.lettuce.pool.max-wait=-1ms
 spring.redis.lettuce.pool.max-idle=8
 # 连接池中的最小空闲连接 默认为 0
 spring.redis.lettuce.pool.min-idle=0
-
-#发送同一类消息的设置为同一个group，保证唯一,默认不需要设置，rocketmq会使用ip@pid(pid代表jvm名字)作为唯一标示
-rocketmq.groupName=please_rename_unique_group_name
-#是否开启自动配置
-rocketmq.isEnable=true
-#mq的nameserver地址
-rocketmq.namesrvAddr=127.0.0.1:9876
-#消息最大长度 默认1024*4(4M)
-rocketmq.producer.maxMessageSize=4096
-#发送消息超时时间,默认3000
-rocketmq.producer.sendMsgTimeout=3000
-#发送消息失败重试次数，默认2
-rocketmq.producer.retryTimesWhenSendFailed=2
-#消费者线程数量
-rocketmq.consumer.consumeThreadMin=5
-rocketmq.consumer.consumeThreadMax=32
-#设置一次消费消息的条数，默认为1条
-rocketmq.consumer.consumeMessageBatchMaxSize=1
-
-
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 mybatis.typeAliasesPackage=com.example.demo.entity
 mybatis.mapper-locations=classpath:mapper/*.xml
-
-spring.dubbo.application.name=dubbo-comsumer
-spring.dubbo.application.registry=zookeeper://127.0.0.1:2181
